# contries_info

./: .gitignore  README.md  app.py  package-lock.json  pyproject.toml  service.md
static/: script.js  style.css
templates/: index.html
